UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/Contract_Document_Token_Data__c.object-meta.xml
<CustomObject>
    <description>Contract Document Token Data</description>
    <label>Contract Document Token Data</label>
    <nameField>
        <label>Contract Document Token Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Document Token Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>