UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Document Token Data</relationshipLabel>
    <relationshipName>Contract_Document_Token_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>