UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Contract_Free_Form_Token__c.field-meta.xml
<CustomField>
    <fullName>Contract_Free_Form_Token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CLM Contract Free Form Token</description>
    <label>Contract Free Form Token</label>
    <referenceTo>Contract_Free_Form_Token__c</referenceTo>
    <relationshipLabel>Contract Document Token Data</relationshipLabel>
    <relationshipName>Contract_Document_Token_Data</relationshipName>
    <type>Lookup</type>
</CustomField>