UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CLM Contract Line</description>
    <label>Contract Line</label>
    <referenceTo>vlocity_cmt__ContractLineItem__c</referenceTo>
    <relationshipLabel>Contract Document Token Data</relationshipLabel>
    <relationshipName>Contract_Document_Token_Data</relationshipName>
    <type>Lookup</type>
</CustomField>