UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Token_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Data_Type__c</fullName>
    <formula>TEXT(Contract_Free_Form_Token__r.Data_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Data Type</label>
    <type>Text</type>
</CustomField>