UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Name__c</fullName>
    <formula>Contract_Free_Form_Token__r.Token_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Name</label>
    <type>Text</type>
</CustomField>