UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Document_Token_Data__c/fields/Token_Value__c.field-meta.xml
<CustomField>
    <fullName>Token_Value__c</fullName>
    <description>Token Value</description>
    <label>Token Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>